# api-client

./: Cargo.toml  LICENSE
.cargo/: config.toml
.github/workflows/: rust.yml
lumeo_api_client/: Cargo.toml
lumeo_api_client/src/: apps.rs  auth.rs  cameras.rs  commands.rs  deployments.rs  discovery_requests.rs  error.rs  events.rs  files.rs  gateways.rs  lib.rs  metrics.rs  models.rs  orgs.rs  pipeline.rs  snapshots.rs  streams.rs
lumeo_api_client/src/commands/: camera.rs
lumeo_api_client/src/pipeline/: node.rs  resolution.rs
lumeo_api_client/src/pipeline/node_properties/: clip_properties.rs  demultiplex_properties.rs  encode_properties.rs  function_properties.rs  grid_properties.rs  gst_template_properties.rs  metadata_inserter_properties.rs  model_inference_properties.rs  multiplex_properties.rs  overlay_properties.rs  snapshot_properties.rs  stream_properties.rs  stream_rtsp_out_properties.rs  stream_web_rtc_out_properties.rs  track_properties.rs  transform_properties.rs  video_source_properties.rs
src/: apps.rs  cameras.rs  deployments.rs  devices.rs  discovery_requests.rs  error.rs  events.rs  files.rs  gateways.rs  lib.rs  models.rs  orgs.rs  pipeline.rs  snapshots.rs  streams.rs
src/util/: json_string.rs
xtask/: Cargo.toml
xtask/src/: main.rs
