[package]
name = "lumeo-api-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "Lumeo API client"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_urlencoded = { git = "https://github.com/lumeohq/serde_urlencoded", rev = "5c66155" }
serde_with = "1.9.4"
strum = { version = "0.23.0", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }
