[package]
name = "lumeo-api-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
description = "Lumeo API client"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = { git = "https://github.com/lumeohq/serde_urlencoded", rev = "5c66155" }
serde_with = "2"
# This allows deriving `sqlx::Type` to share types with `api-server`.
sqlx = { version = "0.6", default-features = false, features = ["macros", "runtime-tokio-rustls"], optional = true }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
vec1 = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

[features]
api-server = ["sqlx"]
